# gemini-webbrowser

./: .gitignore  CHANGELOG.md  README.md  cabal.project.freeze  gemini-browser.cabal
Test/: MyQuickCheck.hs
Test/Input/: response01-success.eg
Test/Protocol/Parser/: TestGemtextParser.hs  TestRequest.hs  TestResponse.hs
app/: Homepage.hs  Main.hs  Pages.hs  ProtocolParser.hs  Socket.hs  Tui.hs  helppage.gmi  homepage.gmi
app/Parse/Protocol/: Request.hs  Response.hs
app/Protocol/Data/: Gemtext.hs  Request.hs  Response.hs
app/Protocol/Parser/: Gemtext.hs  Request.hs  Response.hs
app/Test/: MyQuickCheck.hs
app/Test/Input/: request.eg  response.eg  response02-success.eg
app/Test/Protocol/Parser/: TestGemtextParser.hs  TestRequest.hs  TestResponse.hs
app/Test/Utils/: ParseUtil.hs
app/Tui/: Tui.hs
app/Utils/: ParseUtil.hs
data/: protocol.ex
docs/: gemini-browser-chart.drawio  plan-gemini-browser.odt  project-report.md  project_proposal.md
