cabal-version:      3.0
name:               gemini-browser
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Halvor Brunt
maintainer:         halvor@brunt.no
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall 

executable gemini-browser
    ghc-options: -threaded
    -- Import common warning flags.
    import:           
        warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    build-depends:   
        base ^>=4.17.2.1,
        mtl,
        attoparsec,
        brick,
        megaparsec,
        network,
        text,
        word-wrap,
        bytestring,
        vty,
        microlens,
        microlens-th,
        microlens-mtl,
        network,
        network-simple,
    
    other-modules:
        Protocol.Data.Response,
        Protocol.Data.Request,
        Protocol.Data.Gemtext,

        Protocol.Parser.Response,
        Protocol.Parser.Request,
        Protocol.Parser.Gemtext,

        Tui, 

        Utils.ParseUtil,
        
        Test.Protocol.Parser.TestRequest,
        Test.Protocol.Parser.TestResponse,
        Test.Protocol.Parser.TestGemtextParser,
        Test.Utils.ParseUtil,

    -- Directories containing source files.
    hs-source-dirs:   app

    default-language: Haskell2010
