cabal-version:      3.0
name:               gemini-browser
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Halvor Brunt
maintainer:         halvor@brunt.no
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall 

executable gemini-browser
    ghc-options: -threaded
    -- Import common warning flags.
    import:           
        warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    build-depends:   
        base ^>=4.17.2.1,
        mtl,
        attoparsec,
        brick,
        text,
        word-wrap,
        bytestring,
        vty,
        microlens,
        microlens-th,
        microlens-mtl,
        vector,
        tls,
        network,
        network-simple-tls,
        network-uri,
        data-default-class,
        -- data-default-class is more lightweight than data-default
        QuickCheck,
    
    other-modules:
        Protocol.Data.Response,
        Protocol.Data.Request,

        Protocol.Parser.Response,
        Protocol.Parser.Request,

        Pages,
        Tui, 
        Socket,

        Utils.ParseUtil,
        
        Test.MyQuickCheck,
        Test.Protocol.Parser.TestRequest,
        Test.Protocol.Parser.TestResponse,
        Test.Protocol.Parser.TestGemtextParser,

    -- Directories containing source files.
    hs-source-dirs:   app

    default-language: Haskell2010
