cabal-version:      3.0
name:               gemini-browser
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Halvor Brunt
maintainer:         halvor@brunt.no
build-type:         Simple

extra-doc-files:    CHANGELOG.md, README.md


Test-Suite test
    type:             exitcode-stdio-1.0
    main-is:          MyQuickCheck.hs
    hs-source-dirs:   Test, app

    build-depends:    base >= 4 && < 5,
                        mtl,
                        QuickCheck,
                        bytestring,
                        network-uri,
                        utf8-string,
                        data-default-class,
                        attoparsec,
                        text,
    other-modules:
            Protocol.Data.Request,

    default-language: Haskell2010

common warnings
    ghc-options: -Wall 

executable gemini-browser
    ghc-options: -threaded
    import:           
        warnings

    main-is:          Main.hs

    build-depends:   
        base ^>=4.17.2.1,
        mtl,
        attoparsec,
        brick,
        text,
        utf8-string,
        word-wrap,
        bytestring,
        vty,
        microlens,
        microlens-th,
        microlens-mtl,
        vector,
        tls,
        network,
        network-simple-tls,
        network-uri,
        data-default-class,
        -- data-default-class is more lightweight than data-default
        QuickCheck,
    
    other-modules:
        Protocol.Data.Response,
        Protocol.Data.Request,

        Protocol.Parser.Response,
        Protocol.Parser.Request,

        Pages,
        Tui, 
        Socket,

        Utils.ParseUtil,

    hs-source-dirs:   app

    default-language: Haskell2010
